modified:   ex03/CMakeLists.txt 	new file:   ex03/dumbExample.c 	new file:   ex03/dumbExample.h 	new file:   ex03/testDumbExample.c 	new file:   ex03/unity-2.5.2/include/unity.h 	new file:   ex03/unity-2.5.2/include/unity_fixture.h 	new file:   ex03/unity-2.5.2/include/unity_fixture_internals.h 	new file:   ex03/unity-2.5.2/include/unity_internals.h 	new file:   ex03/unity-2.5.2/include/unity_memory.h 	new file:   ex03/unity-2.5.2/lib/libunity.a 	new file:   ex04/CMakeLists.txt 	renamed:    ex03/cpputest-3.8/include/CppUTest/CommandLineArguments.h -> ex04/cpputest-3.8/include/CppUTest/CommandLineArguments.h 	renamed:    ex03/cpputest-3.8/include/CppUTest/CommandLineTestRunner.h -> ex04/cpputest-3.8/include/CppUTest/CommandLineTestRunner.h 	renamed:    ex03/cpputest-3.8/include/CppUTest/CppUTestConfig.h -> ex04/cpputest-3.8/include/CppUTest/CppUTestConfig.h 	renamed:    ex03/cpputest-3.8/include/CppUTest/CppUTestGeneratedConfig.h -> ex04/cpputest-3.8/include/CppUTest/CppUTestGeneratedConfig.h 	renamed:    ex03/cpputest-3.8/include/CppUTest/JUnitTestOutput.h -> ex04/cpputest-3.8/include/CppUTest/JUnitTestOutput.h 	renamed:    ex03/cpputest-3.8/include/CppUTest/MemoryLeakDetector.h -> ex04/cpputest-3.8/include/CppUTest/MemoryLeakDetector.h 	renamed:    ex03/cpputest-3.8/include/CppUTest/MemoryLeakDetectorMallocMacros.h -> ex04/cpputest-3.8/include/CppUTest/MemoryLeakDetectorMallocMacros.h 	renamed:    ex03/cpputest-3.8/include/CppUTest/MemoryLeakDetectorNewMacros.h -> ex04/cpputest-3.8/include/CppUTest/MemoryLeakDetectorNewMacros.h 	renamed:    ex03/cpputest-3.8/include/CppUTest/MemoryLeakWarningPlugin.h -> ex04/cpputest-3.8/include/CppUTest/MemoryLeakWarningPlugin.h 	renamed:    ex03/cpputest-3.8/include/CppUTest/PlatformSpecificFunctions.h -> ex04/cpputest-3.8/include/CppUTest/PlatformSpecificFunctions.h 	renamed:    ex03/cpputest-3.8/include/CppUTest/PlatformSpecificFunctions_c.h -> ex04/cpputest-3.8/include/CppUTest/PlatformSpecificFunctions_c.h 	renamed:    ex03/c

--- a/ex03/CMakeLists.txt
+++ b/ex03/CMakeLists.txt
@@ -2,31 +2,26 @@
 cmake_minimum_required(VERSION 3.10)
 
 set(PROJECTNAME testDumbExample)
-project(${PROJECTNAME} VERSION 0.0 LANGUAGES C CXX)
+project(${PROJECTNAME} VERSION 0.0 LANGUAGES C)
 
-set(CPPUTEST_HOME cpputest-3.8)
-
-#the memory leak macros
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -include ${CPPUTEST_HOME}/include/CppUTest/MemoryLeakDetectorNewMacros.h")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -include ${CPPUTEST_HOME}/include/CppUTest/MemoryLeakDetectorMallocMacros.h")
+set(UNITY_HOME unity-2.5.2)
 
 include_directories(
 	.
-	${CPPUTEST_HOME}/include
+	${UNITY_HOME}/include
 )
 
 link_directories(
-	${CPPUTEST_HOME}/lib
+	${UNITY_HOME}/lib
 )
 
 set(SOURCES
-	testDumbExample.cxx
+	testDumbExample.c
+	dumbExample.c
 )
 
 add_executable(${PROJECTNAME} ${SOURCES})
 
 target_link_libraries(${PROJECTNAME}
-	CppUTest 
-	CppUTestExt
+	unity
 )
-
